[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
itertools = "0.10.5"
reikna = "0.12.3"
num-integer = "0.1.45"
ndarray = "0.15.6"
priority-queue = "1.3.0"
num-traits = "0.2.15"

[profile.dev]
opt-level = 3
